# excellAnalizer

./: .gitignore  README.md
app/backend/: README.md  pyproject.toml
app/backend/src/document_platform_backend/: __init__.py  api.py  change_logger.py  document_exporter.py  document_normalizer.py  document_validator.py  main.py  models.py  plugin_registry.py  workbook_parser.py
app/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/frontend/src/: App.tsx  api.ts  formatters.ts  styles.css
app/frontend/src-tauri/: Cargo.toml  tauri.conf.json
app/frontend/src-tauri/src/: main.rs
app/shared/: README.md
app/shared/contracts/: document-export.ts  document-model.ts  document-preview.ts  document-validation.ts  job-contracts.ts  plugin-manifest.schema.json
docs/: architecture.md  bootstrap.md  pdf-excel-comparison-plan.md  project-structure.md  requirements-spec.md  roadmap-backlog.md
plugins/: README.md
plugins/sample-pdf-plugin/: README.md  manifest.json  plugin.py
scripts/bootstrap/: check-local-stack.sh  dev-env.sh  install-backend-deps.sh  install-frontend-deps.sh  install-local-node.sh  install-local-rust.sh  run-backend.sh  run-dev-stack.sh  run-frontend.sh  run-tauri-dev.sh
