[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-platform-backend"
version = "0.1.0"
description = "Processing engine for workbook analysis and plugin-driven document ingestion"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.2,<3.0"
]

[project.scripts]
document-platform-backend = "document_platform_backend.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
